2008-02-14  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Adam Roben.

        http://bugs.webkit.org/show_bug.cgi?id=17207
        Database example doesn't work (requires not-yet-released Safari)

        * WebChromeClient.cpp:
        (WebChromeClient::exceededDatabaseQuota): Check Safari version, and allow 5 megabytes of storage
        if it's too old.

2008-02-13  Ada Chan  <adachan@apple.com>

        <rdar://problem/5740656> Leak in postDidAddIconNotification in WebIconDatabase

        Reviewed by Darin.

        * WebIconDatabase.cpp:
        (postDidAddIconNotification): Need to adopt the newly created instance of CFDictionaryPropertyBag, 
        which already has a ref count of 1.

2008-02-13  Rodney Dawes  <dobey@wayofthemonkey.com>

        Fix Bug 17220: Illogical dependency between PluginView and
        PluginDatabase
        
        <http://bugs.webkit.org/show_bug.cgi?id=17220>

        Reviewed by Adam and Darin.

        Update for the rename of PluginDatabase::createPluginView
        to PluginView::create

        * WebFrame.cpp:

2008-02-13  Adam Roben  <aroben@apple.com>

        Windows build fix

        * Interfaces/WebKit.idl: Create the typelib version symbol ourselves.

2008-02-12  Steve Falkenburg  <sfalken@apple.com>

        Use a precompiled header to build WebKit.
        
        Reviewed by Adam.

        * WebKit.vcproj/WebKit.vcproj:
        * WebKitPrefix.cpp: Added.
        * WebKitPrefix.h: Added.

2008-02-12  Steve Falkenburg  <sfalken@apple.com>

        Changes to support merged MIDL output.

        All COM interfaces are now generated to WebKit.h.

        Reviewed by Sam, Ada.

        * DOMCSSClasses.h:
        * DOMCoreClasses.h:
        * DOMEventsClasses.h:
        * DOMHTMLClasses.h:
        * DefaultDownloadDelegate.h:
        * DefaultPolicyDelegate.cpp:
        * DefaultPolicyDelegate.h:
        * GEN_DOMObject.h:
        * Interfaces/DOMCSS.idl:
        * Interfaces/DOMCore.idl: